# Stockmarket

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  RESUME_CONTENT.md  check_fix.py  check_nb02.py  config.yaml  conftest.py  createstructure.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker.yml
archive/: README.md  __init__.py
archive/api/: __init__.py  outbreak.py  search.py  terminology.py
archive/pipeline/: __init__.py
archive/pipeline/phase1_data_foundation/: __init__.py  namaste_processor.py
archive/pipeline/phase3_ml_ai/: __init__.py  ai_engine.py
archive/src/: __init__.py
archive/src/services/: __init__.py  ai_assistant.py  multilingual_support.py  research_analytics.py  telemedicine_integration.py
docs/: METHODOLOGY.md  PORTFOLIO_SELECTION.md
frontend/: .gitignore  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/components/: CodeBlock.tsx  Layout.tsx  MetricCard.tsx
frontend/lib/: api.ts
frontend/pages/: _document.tsx  api.tsx  backtesting.tsx  bayesian.tsx  index.tsx  machine-learning.tsx  portfolio-optimization.tsx  risk-metrics.tsx  volatility.tsx
frontend/styles/: globals.css
notebooks/: 01_data_collection.ipynb  02_eda.ipynb  03_portfolio_analysis.ipynb  03_portfolio_analysis.py  04_ml_forecasting.ipynb  05_bayesian_modeling.ipynb  06_interpretability.ipynb
src/: __init__.py
src/analysis/: __init__.py  black_litterman.py  cvar_opt.py  garch.py  hrp.py  portfolio.py  realized_vol.py  risk_metrics.py
src/api/: __init__.py  auth.py  main.py  middleware.py  routes.py
src/backtesting/: __init__.py  backtester.py  costs.py  metrics.py
src/data/: __init__.py  fetch_data.py  preprocess.py
src/features/: __init__.py  feature_store.py
src/models/: __init__.py  bayesian_hierarchical.py  deep_learning.py  ensemble.py  interpret.py  mlflow_tracking.py  optuna_tuning.py  supervised_ml.py  time_series.py  walk_forward.py
src/utils/: __init__.py  config.py  helpers.py  settings.py
src/visualization/: __init__.py  plots.py
tests/: test_data.py  test_models.py  test_risk_metrics.py
