[build-system]
requires = ["setuptools>=75.0", "wheel>=0.45"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "portfolio-risk-analyzer"
version = "1.0.0"
description = "Institutional-grade quantitative finance pipeline combining classical portfolio theory, ML forecasting, and Bayesian inference"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Aditya Thetsu"},
]

keywords = ["finance", "portfolio", "risk", "machine-learning", "bayesian"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pandas==2.2.2",
    "numpy==1.26.4",
    "yfinance==0.2.40",
    "matplotlib==3.9.0",
    "seaborn==0.13.2",
    "plotly==5.22.0",
    "scikit-learn==1.5.0",
    "xgboost==2.0.3",
    "pyyaml==6.0.1",
    "scipy==1.13.0",
    "statsmodels==0.14.2",
    "jupyter==1.0.0",
    "nbformat==5.10.4",
    "ipykernel==6.29.4",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "pydantic-yaml>=1.3.0",
    "python-dotenv>=1.0.1",
]

[project.urls]
Homepage = "https://github.com/athtetsu/Stockmarket"
Repository = "https://github.com/athtetsu/Stockmarket"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.0",
    "ruff>=0.6.0",
    "black>=24.8.0",
    "isort>=5.13.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
    "hypothesis>=6.108.0",
    "mutmut>=3.0.0",
]
api = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.31.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
]
dl = [
    "torch>=2.4.0",
    "pytorch-forecasting>=1.0.0",
    "pytorch-lightning>=2.4.0",
]
bayes = [
    "pymc>=5.16.0",
    "arviz>=0.19.0",
    "numpyro>=0.15.0",
]
ml = [
    "optuna>=4.0.0",
    "shap>=0.46.0",
    "lightgbm>=4.5.0",
    "catboost>=1.2.0",
    "mlflow>=2.16.0",
]
all = [
    "portfolio-risk-analyzer[dev,api,dl,bayes,ml]",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
    "B",  # bugbear
    "SIM",# flake8-simplify
    "C4", # flake8-comprehensions
    "RUF",# ruff-specific
]
ignore = [
    "E501",  # line-too-long (handled by black)
    "E402",  # module-import-not-at-top-of-file (for path setup in notebooks)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_sort_within_sections = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
explicit_package_bases = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_unimported = false
disallow_any_expr = false
disallow_any_decorated = false
disallow_subclassing_any = false
check_untyped_defs = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = [
    "yfinance",
    "xgboost",
    "scipy.*",
    "statsmodels.*",
    "matplotlib.*",
    "seaborn",
    "plotly.*",
    "yaml",
    "nbformat.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*", "check_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--no-header",
]
filterwarnings = [
    "ignore::FutureWarning",
    "ignore::DeprecationWarning:statsmodels.*:",
    "ignore::UserWarning:statsmodels.*:",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

